# karakus

./: .env.local  .gitignore  Makefile  README.md  pyproject.toml
api/: __init__.py  main.py
api/core/: config.py  constants.py  llm.py  logger.py  method_test.py  parser.py  storage.py
api/interfaces/: auth_service.py  database_service.py  llm_service.py  storage_service.py
api/middlewares/: __init__.py  api_error_middleware.py  auth_middleware.py  monitoring.py
api/models/: ai.py  auth.py  documents.py  lemonsqueezy.py
api/routers/: ai.py  auth.py  lemonsqueezy.py
api/services/etl/: chunking.py  cleaning.py  destination_connectors.py  extract.py  partitioning.py  source_connectors.py
api/services/huggingface/: __init__.py  config.py  huggingface_service.py
api/services/langchain/: __init__.py  base.py  langchain_ollama.py  langchain_openai.py  langchain_vertexai.py
api/services/lemonsqueezy/: __init__.py  config.py  lemonsqueezy_service.py
api/services/llama_index/: config.py  llama_index_service.py
api/services/ollama/: __init__.py  config.py  ollama_service.py
api/services/openrouter/: __init__.py  config.py  openrouter_service.py
api/services/pydantic_ai/vertexai_service/: __init__.py  config.py  vertexai_service.py
api/services/supabase/: __init__.py  supabase_auth_service.py  supabase_client.py  supabase_db_service.py  supabase_service.py  supabase_storage_service.py
api/utils/: file_downloader.py  jsonify.py  pdf_downloader.py  slugify.py  threadpool.py
static/assets/scripts/: ollama_functions.py
static/assets/structured_data/: turk-ceza-kanunu.json
static/assets/test_files/: junk.json  sample_embedding_result.json  turk-ceza-kanunu.json
tests/: conftest.py  test_etl.py  test_huggingface.py  test_parser.py
tests/http/chat/: completions.http  stream.http
tests/services/: test_storage.py
