[project]
name = "karakus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "pydantic>=2.10.4",
    "fastapi[standard]>=0.115.6",
    "pydantic-settings>=2.7.1",
    "loguru>=0.7.3",
    "rich>=13.9.4",
    "sentence-transformers>=3.3.1",
    "numpy>=2.2.1",
    "huggingface-hub>=0.27.1",
    "openai>=1.59.6",
    "markitdown>=0.0.1a3",
    "unstructured[all-docs,local-inference]>=0.10.30",
    "nltk==3.8.1",
    "certifi>=2024.12.14",
    "gotrue>=2.11.1",
    "supabase>=2.11.0",
    "unstructured-ingest>=0.3.15",
    "sqlalchemy[asyncio]>=2.0.37",
    "qdrant-client>=1.13.0",
    "pypdf2>=3.0.1",
    "aiosqlite>=0.20.0",
    "pymilvus>=2.5.3",
    "asyncio>=3.4.3",
    "langchain-ollama>=0.2.2",
    "langchain-openai>=0.3.0",
    "langchain-google-vertexai>=2.0.7",
    "langchain-google-genai>=2.0.9",
    "langchain-unstructured>=0.1.6",
    "langchain-community>=0.3.14",
    "ollama>=0.4.6",
    "google-cloud-aiplatform>=1.38",
    "langgraph>=0.2.64",
    "langsmith>=0.2.11",
    "pydantic-ai>=0.0.19",
    "llama-index>=0.10.45.post1",
    "llmsherpa>=0.1.4",
    "pydantic-extra-types>=2.10.2",
    "llama-index-llms-ollama>=0.2.2",
    "llama-index-core>=0.10.45",
    "llama-index-llms-openai>=0.1.26",
    "pycountry>=24.6.1",
]

[dependency-groups]
dev = [
    "isort>=5.13.2",
    "loguru>=0.7.3",
    "mypy>=1.14.1",
    "pre-commit>=4.0.1",
    "pytest-asyncio>=0.25.2",
    "pytest>=8.3.4",
    "ruff>=0.8.6",
]

[tool.uv.workspace]
members = ["packages/*"]


[tool.ruff]
# Group violations by containing file.
output-format = "grouped"
line-length = 88

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 20
exclude = [".venv"]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"




[tool.isort]
profile = "black"
src_paths = ["app", "packages"]
multi_line_output = 3


[tool.mypy]
python_version = "3.12"
plugins = ['pydantic.mypy']
warn_return_any = true
warn_unused_configs = true
exclude = [".venv"]


[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true


[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
log_file = "./static/assets/logs/tests.log"
console_output_style = "count"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::FutureWarning",
]
asyncio_default_fixture_loop_scope = "function"  # or "class", "module", etc.
